--- a/ops/geth.service
+++ b/ops/geth.service
@@ -7,7 +7,7 @@ Type=simple
 User=ubuntu
 Group=ubuntu
 WorkingDirectory=/home/ubuntu
-ExecStart=geth --rpc
+ExecStart=/usr/bin/geth --rpc
 Restart=on-failure
 KillSignal=SIGINT
 SyslogIdentifier=geth
