--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "homepage": "https://github.com/NodeWorldwide/ethereum-watch#readme",
   "dependencies": {
     "dotenv": "^5.0.1",
-    "eth-chainsaw": "github:SpankChain/chainsaw",
+    "eth-chainsaw": "^1.1.5",
     "node-fetch": "^2.1.2",
     "web3": "^0.20.6"
   }
